<resources>
    <string name="app_name">protest</string>
    <string name="create_new_protest"><b>CREATE NEW PROTEST</b></string>
    <string name="route">ROUTE</string>
    <string name="route_description">ROUTE DESCRIPTION</string>
    <string name="ellipse">Ellipse</string>

    <string name="create_new_protest_heading"> CREATE NEW PROTEST</string>
    <string name="Location_heading"> LOCATION</string>
    <string name="nameHeading"> NAME</string>
    <string name="datesHeading"> DATES</string>
    <string name="descriptionHeading"> DESCRIPTION</string>
    <string name="Location_heading_2"> LOCATION:</string>
    <string name="start_date_heading_2"> START DATE:</string>
    <string name="end_date_heading_2"> END DATE:</string>
    <string name="description_Heading_2"> DESCRIPTION:</string>

    <string name="success_string"><b>SUCCESS / EVENT CREATED</b></string>
    <string name="facebook_share"><b>SHARE TO FACEBOOK</b></string>
    <string name="twitter_share"><b>SHARE TO TWITTER</b></string>
    <string name="regular_share">SHARE</string>
    <string name="INFO">INFO</string>
    <string name="event_details">EVENT DETAILS</string>

    <string name="logo">protest.</string>
    <string name="enter_location_text"> enter the location of your event</string>
    <string name="enter_name_text"> enter name</string>
    <string name="enter_startdate_text"> start date</string>
    <string name="enter_enddate_text"> end date</string>
    <string name="enter_description_text"> enter your description</string>
    <string name="enter_login_text"> Login</string>]
    <string name="enter_signup_text"> Signup</string>
    <string name="enter_username_text"> Username</string>
    <string name="enter_password_text"> Password</string>
    <string name="my_protest_heading"> MY PROTESTS</string>

    <string name="protest_title">protest</string>
    <string name="full_stop">.</string>

    <string name="signup_button"> Signup</string>

    <string name="facebook_app_id">408214960308564</string>
    <string name="facebook_login_protocol_scheme">fb408214960308564</string>


    <!--    create new maker strings-->
    <string name="createNewMarkerHeading">CREATE NEW MARKER</string>
    <string name="exampleLocation">EX. 11th St and L St</string>
    <string name="markerTypeHeader">MARKER TYPE</string>
    <string name="postEventFeed">POST TO EVENT FEED?</string>
    <string name="cancel">CANCEL</string>
    <string name="post">POST</string>
    <string name="feed_string">FEED</string>

    <string-array name="markerTypes">
        <item>AID STATION</item>
        <item>WATER STATION</item>
    </string-array>

<!--    edit existing event strings -->
    <string name="editEventHeading">EDIT EVENT</string>
</resources>