<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Createnewprotest1Activity">

    <TextView
        android:id="@+id/CreateNewProtestHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/create_new_protest_heading"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/location_input"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/text_box_crossscreen"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:text="@string/enter_location_text"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/Location_heading" />

    <TextView
        android:id="@+id/Location_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Location_heading"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/CreateNewProtestHeading" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_box_crossscreen"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:text="@string/enter_name_text"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/nameHeading" />

    <TextView
        android:id="@+id/nameHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nameHeading"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/location_input" />

    <TextView
        android:id="@+id/datesHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/datesHeading"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <EditText
        android:id="@+id/enterDate1"
        android:layout_width="178dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/text_box_crossscreen"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:text="@string/enter_startdate_text"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/enterDate2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/datesHeading" />

    <EditText
        android:id="@+id/enterDate2"
        android:layout_width="160dp"
        android:layout_height="67dp"
        android:background="@drawable/text_box_crossscreen"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:text="@string/enter_enddate_text"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/enterDate1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/descriptionHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/descriptionHeading"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/enterDate1" />

    <EditText
        android:id="@+id/enterDescription"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_box_crossscreen"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:text="@string/enter_description_text"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/descriptionHeading" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.93917274"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>