<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:clipToPadding="false"
    tools:context=".createNewMarker">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <TextView
        android:id="@+id/createNewMarker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/nevis_bold"
        android:text="@string/createNewMarkerHeading"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LocationHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/circular_std_black"
        android:text="@string/Location_heading"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/createNewMarker" />

    <EditText
        android:id="@+id/locationInput"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/text_box"
        android:ems="10"
        android:fontFamily="@font/circular_std_black"
        android:hint="@string/exampleLocation"
        android:inputType="textPersonName"
        android:paddingLeft="30px"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#aaa"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/LocationHeader" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="0dp"
        android:layout_height="113dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/text_box"
        android:ems="10"
        android:fontFamily="@font/circular_std_black"
        android:gravity="top"
        android:hint="ENTER YOUR DESCRIPTION AND ANY NOTES"
        android:inputType="textPersonName"
        android:paddingLeft="30px"
        android:paddingTop="30px"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#aaa"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/markerTypeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/circular_std_black"
        android:text="@string/markerTypeHeader"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/locationInput" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/circular_std_black"
        android:text="@string/descriptionHeading"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/typeofmarker" />

    <TextView
        android:id="@+id/postEventFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/circular_std_black"
        android:text="@string/postEventFeed"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInput" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:buttonTint="#FFFFFF"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/postEventFeed"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toEndOf="@+id/postEventFeed" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#FA8B8B"
        android:fontFamily="@font/nevis_bold"
        android:onClick="cancelCreate"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/post"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postEventFeed"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/post"
        android:layout_width="201dp"
        android:layout_height="75dp"
        android:backgroundTint="#50EFA3"
        android:fontFamily="@font/nevis_bold"
        android:onClick="createNewMarker"
        android:text="CREATE"
        app:layout_constraintBaseline_toBaselineOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/typeofmarker"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_box"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/markerTypeHeader" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="45dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_box"
        android:onClick="getCurrLoc"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/LocationHeader"
        app:srcCompat="@android:drawable/ic_menu_mylocation" />

</androidx.constraintlayout.widget.ConstraintLayout>