<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#000000">

<!--    <Button-->
<!--    android:id="@+id/button_arrow2"-->
<!--    android:layout_width="40dp"-->
<!--    android:layout_height="40dp"-->
<!--    android:background="@drawable/button_with_arrow"-->
<!--    android:gravity="center_vertical|center_horizontal"-->
<!--    android:textColor="#fff"-->
<!--    app:layout_constraintBottom_toBottomOf="parent"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->
<!--    app:layout_constraintHorizontal_bias="0.956"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintTop_toTopOf="parent"-->
<!--    app:layout_constraintVertical_bias="0.949" />-->

    <ImageButton
        android:id="@+id/next_screen_main"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/baseline_keyboard_backspace_black_48dp_upd"
        android:backgroundTint="#FFFFFF"
        android:scaleX="-1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/success_protest_created_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/nevis_bold"
        android:text="@string/success_string"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/ellipse"
        android:src="@drawable/tick_mark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/success_protest_created_string" />

    <Button
        android:id="@+id/fb_share_btn"
        android:layout_width="309dp"
        android:layout_height="42dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/facebook_button"
        android:fontFamily="@font/circular_std_black"
        android:letterSpacing="0.1"
        android:text="@string/facebook_share"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/twitter_share_btn"
        android:layout_width="309dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/twitter_button"
        android:fontFamily="@font/circular_std_black"
        android:letterSpacing="0.1"
        android:text="@string/twitter_share"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fb_share_btn" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="309dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_box"
        android:fontFamily="@font/circular_std_black"
        android:letterSpacing="0.1"
        android:text="@string/regular_share"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twitter_share_btn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.93917274"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline">

        <ImageView
            android:id="@+id/imageView_4"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:backgroundTint="#00554040"
            android:contentDescription="@string/ellipse"
            android:src="@drawable/ellipse"
            android:layout_marginRight="4dp"
            android:layout_marginTop="1.2dp"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:contentDescription="@string/ellipse"
            android:src="@drawable/ellipse"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="1.2dp"/>

        <ImageView
            android:id="@+id/imageView_"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:contentDescription="@string/ellipse"
            android:src="@drawable/ellipse"
            android:layout_marginLeft="4dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>